# triptic

./: .dockerignore  .env.example  .gitignore  API.md  CHANGES.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  README_IMGEN.md  check_prod_asset.py  check_version_data.py  design.md  find_asset.py  find_asset_by_uuid.py  fly.toml  list_asset_groups.py  package.json  pyproject.toml  test_all_pages.py  test_apple_page.py  test_flip_bird.py  test_flip_bug.py  test_flip_cat.py  test_flip_versions.py  test_regenerate_prompt.py  test_regenerate_versions.py  test_version_prompts.py  test_wall_interactions.py
.claude/: settings.json
.claude/agents/: api.md  architecture.md  code-builder.md  data.md  debugger.md  designer.md  dev-server-manager.md  devops.md  frontend-specialist.md  integration.md  monitoring.md  performance-optimization.md  refactoring.md  requirements-analyst.md  security.md  testing.md  vsm-algedonic.md  vsm-audit.md  vsm-control.md  vsm-coordination.md  vsm-intelligence.md  vsm-operations.md  vsm-policy.md
.claude/skills/deploy/: SKILL.md
.claude/skills/triptic/: SKILL.md
.github/workflows/: ci.yml
public/: asset_group.html  dashboard.html  index.html  playlists.html  queue.html  settings.html  test.html  wall.html
public/shared/: nav.css  nav.js
src/triptic/: __init__.py  cli.py  db.py  imgen.py  main.py  server.py  storage.py
tests/: conftest.py  test_asset_group_issues.py  test_endpoints_integration.py  test_frontend_playwright.py  test_genai_integration.py  test_main.py  test_specific_asset_group.py
