[project]
name = "triptic"
version = "0.1.0"
description = "Time-based triptych display system for synchronized multi-screen installations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
triptic = "triptic.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triptic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
